2001-07-03  Oliver Kiddle  <opk@zsh.org>

	* 15223, Akinori Musha: 15215: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_sysctl: Add completion for sysctl(8)

2001-07-02  Bart Schaefer  <schaefer@zsh.org>

	* unposted: zshconfig.ac: Remove references to FUNCINST_MK.

2001-07-02  Oliver Kiddle  <opk@zsh.org>

	* 15204: zshconfig.ac, Src/compat.c, Src/params.c: fix compilation
	problems on IRIX 5.3 and correct error messages

2001-06-30  Bart Schaefer  <schaefer@zsh.org>

	* 15191: Src/init.c: Don't infinite loop if there's an error in
	the user's precmd -- reset errflag after preprompt().

2001-06-29  Andrej Borsenkow  <bor@zsh.org>

	* 15183: zshconfig.ac: fix DLLD in non-ELF case

2001-06-29  Clint Adams  <clint@zsh.org>

        * Bart: 15083 plus comments: Functions/Zle/bash-backward-kill-word:
	bash-style backward-kill-word function.

2001-06-28  Wayne Davison  <wayned@users.sourceforge.net>

	* 15172: Src/hist.c: Have prepnexthistent() remove any HIST_TEMPSTORE
	entry that is present.

2001-06-28  Peter Stephenson  <pws@csr.com>

	* 15160: Doc/Makefile.in: install zsh.html if generated by
	texi2html.

2001-06-28  Oliver Kiddle  <opk@zsh.org>

	* unposted: Etc/zsh-development-guide, Test/B01cd.ztst: fix typos

	* 15159: Completion/X/Command/_vnc: fix for two digit display numbers,
	use _values for -encodings option and complete for xvncviewer

2001-06-28  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 15151: zshconfig.ac: --enable-sitefndir should be
	--enable-site-fndir, spotted by Jos Backus.

2001-06-28  Clint Adams  <clint@zsh.org>

        * 15079: Completion/Unix/Command/_last,
	Completion/Unix/Type/_users: last
	takes other arguments than users.

2001-06-26  Sven Wischnowsky  <wischnow@zsh.org>

	* user/3946: Src/Zle/computil.c: fix for finding the first
	ambiguous path component in compfiles

2001-06-25  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk: version zsh-4.0.2.
